[package]
name = "periodic_timer"
version = "0.1.1"
authors = ["keg66 <keg@keg66.com>"]
description = "simple Rust implementation of periodic timer."
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/keg66/periodic_timer"

[[bin]]
name = "sample"
path = "bin/sample.rs"

[[bin]]
name = "capture_sample"
path = "bin/capture_sample.rs"

[[bin]]
name = "struct_sample"
path = "bin/struct_sample.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin_sleep = "1.1.1"
